9 April 2010: Wouter
	- Fix bug#305: pkt_dname_tolower could read beyond end of buffer or
	  get into an endless loop, if 0x20 was enabled, and buffers are small
	  or particular broken packets are received.

8 April 2010: Wouter
	- Fix validation of queries with wildcard names (*.example).

6 April 2010: Wouter
	- Fix EDNS probe for .de DNSSEC testbed failure, where the infra
	  cache timeout coincided with a server update, the current EDNS 
	  backoff is less sensitive, and does not cache the backoff unless 
	  the backoff actually works and the domain is not expecting DNSSEC.
	- GOST support with correct algorithm numbers.

1 April 2010: Wouter
	- iana portlist updated.

24 March 2010: Wouter
	- unbound control flushed items are not counted when flushed again.

23 March 2010: Wouter
	- iana portlist updated.

22 March 2010: Wouter
	- unbound-host disables use-syslog from config file so that the
	  config file for the main server can be used more easily.
	- fix bug#301: unbound-checkconf could not parse interface
	  '0.0.0.0@5353', even though unbound itself worked fine.

19 March 2010: Wouter
	- fix fwd_ancil test to pass if the socket options are not supported.

18 March 2010: Wouter
	- Fixed random numbers for port, interface and server selection.
	  Removed very small bias.
	- Refer to the listing in unbound-control man page in the extended
	  statistics entry in the unbound.conf man page.

16 March 2010: Wouter
	- Fix interface-automatic for OpenBSD: msg.controllen was too small,
	  also assertions on ancillary data buffer.
	- check for IP_SENDSRCADDR for interface-automatic or IP_PKTINFO.
	- for NSEC3 check if signatures are cached.

15 March 2010: Wouter
	- unit test for util/regional.c.

12 March 2010: Wouter
	- Reordered configure checks so fork and -lnsl -lsocket checks are
	  earlier, and thus later checks benefit from and do not hinder them.
	- iana portlist updated.
	- ldns tarball updated.
	- Fix python use when multithreaded.